# dessertlist

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/dessertlist/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: edit_screen.dart  main.dart  place_details.dart  place_details.g.dart  place_store.dart  view_place.dart
server/dessertlist_server/: pyproject.toml
server/dessertlist_server/dessertlist_server/: main.py
server/dessertlist_server/tests/: test_dessertlist_server.py
test/: widget_test.dart
web/: index.html  manifest.json
