[tool.poetry]
name = "dessertlist_server"
version = "0.1.0"
description = ""
authors = ["Arjo Chakravarty <arjo@openrobotics.org>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "dessertlist_server.main:start"